scrollbar fix

--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body {
     width:100%;
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
-    grid-template-rows: auto auto;
+    grid-template-rows: repeat(2, minmax(0, 1fr));
     grid-template-areas:
         "editor editor tokens tokens"
         "editor editor ast ast";
